# buildpacks-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  buildpack.toml  notes-pycs.md  notes.md
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check_changelog.yml  ci.yml  prepare-release.yml  release.yml
requirements/: setuptools.txt  uv.txt  wheel.txt
src/: checks.rs  detect.rs  django.rs  errors.rs  functions.rs  main.rs  package_manager.rs  packaging_tool_versions.rs  project_descriptor.rs  python_version.rs  python_version_file.rs  runtime_txt.rs  salesforce_functions.rs  utils.rs
src/layers/: mod.rs  pip.rs  pip_cache.rs  pip_dependencies.rs  poetry.rs  poetry_dependencies.rs  python.rs  uv.rs  uv_cache.rs  uv_dependencies.rs
test-fixtures/cowsay/: Procfile  hello.py
test-fixtures/function_invalid_not_async/: main.py
test-fixtures/function_python_3.10/: project.toml
test-fixtures/function_python_version_invalid/: main.py
test-fixtures/function_python_version_unavailable/: runtime.txt
test-fixtures/poetry/: pyproject.toml
test-fixtures/poetry/tests/: test_testapp_poetry.py
tests/: checks_test.rs  detect_test.rs  django_test.rs  integration.rs  mod.rs  package_manager_test.rs  pip_test.rs  poetry_test.rs  python_version_test.rs  uv_test.rs
tests/fixtures/django_collectstatic/backend/testproject/: settings.py
tests/fixtures/django_staticfiles_latest_django/: manage.py
tests/fixtures/django_staticfiles_latest_django/backend/testproject/: settings.py
tests/fixtures/django_staticfiles_legacy_django/: requirements.txt
tests/fixtures/django_staticfiles_legacy_django/testproject/: settings.py
tests/fixtures/function_fails_self_check/: project.toml
tests/fixtures/function_missing_functions_package/: project.toml
tests/fixtures/function_template/: requirements.txt
tests/fixtures/pip_and_poetry/: pyproject.toml
tests/fixtures/pip_basic/: manage.py  requirements.txt
tests/fixtures/pip_editable_git_compiled/: requirements.txt
tests/fixtures/pip_oldest_python/: .python-version
tests/fixtures/poetry_editable_git_compiled/: pyproject.toml
tests/fixtures/poetry_mismatched_python_version/: pyproject.toml
tests/fixtures/poetry_oldest_python/brotli/: .gitkeep
tests/fixtures/project_toml_invalid/: project.toml
tests/fixtures/project_toml_non_salesforce/: project.toml
tests/fixtures/python_3.8/: requirements.txt
tests/fixtures/python_version_file_invalid_unicode/: .python-version
tests/fixtures/python_version_file_invalid_version/: .python-version
tests/fixtures/python_version_file_multiple_versions/: .python-version
tests/fixtures/runtime_txt_invalid_version/: runtime.txt
tests/fixtures/runtime_txt_non_existent_version/: runtime.txt
tests/fixtures/salesforce_function_missing_package/: requirements.txt
tests/fixtures/salesforce_function_template/: project.toml
tests/fixtures/testing_buildpack/: buildpack.toml
tests/fixtures/uv_editable_git_compiled/: pyproject.toml
tests/integration/: detect.rs  mod.rs  package_manager.rs  pip.rs  python_version.rs  salesforce_functions.rs
