[package]
name = "python-buildpack"
edition = "2021"
rust-version = "1.77"
# Disable automatic integration test discovery, since we import them in main.rs (see comment there).
autotests = false

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
# Prevent warnings caused by the large size of `ureq::Error` in error enums,
# where it is not worth boxing since the enum size doesn't affect performance.
large_enum_variant = "allow"
result_large_err = "allow"

[dependencies]
# The default `miniz_oxide` flate2 backend has poor performance in debug/under QEMU:
# https://github.com/rust-lang/flate2-rs/issues/297
# Ideally we'd use the fastest `zlib-ng` backend, however it fails to cross-compile:
# https://github.com/rust-lang/libz-sys/issues/93
# As such we have to use the next best alternate backend, which is `zlib`.
flate2 = { version = "1", default-features = false, features = ["zlib"] }
indoc = "2"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = "=0.19.0"
libherokubuildpack = { version = "=0.19.0", default-features = false, features = ["log"] }
serde = "1"
tar = { version = "0.4", default-features = false }
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
libcnb-test = "=0.19.0"
