[package]
name = "python-buildpack"
edition = "2024"
rust-version = "1.88"
# Disable automatic integration test discovery, since we import them in main.rs (see comment there).
autotests = false

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
# Prevent warnings caused by the large size of `ureq::Error` in error enums,
# where it is not worth boxing since the enum size doesn't affect performance.
large_enum_variant = "allow"
result_large_err = "allow"

[dependencies]
# We use the `zlib-rs` backend, since it's the fastest:
# https://github.com/rust-lang/flate2-rs#backends
# https://trifectatech.org/blog/zlib-rs-is-faster-than-c/
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
indoc = "2"
libcnb = { version = "0.29", features = ["trace"] }
libherokubuildpack = { version = "0.30", default-features = false, features = ["log"] }
serde = "1"
tar = { version = "0.4", default-features = false }
ureq = { version = "2", default-features = false, features = ["tls"] }
zstd = { version = "0.13", default-features = false }

[dev-dependencies]
libcnb-test = "0.29"
# Required due to: https://github.com/heroku/libcnb.rs/issues/944
regex = { version = "1", default-features = false, features = ["std"] }
