[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

# This requirement uses a VCS URL and `develop = true` in order to test that:
#  - Git from the stack image can be found (ie: the system PATH has been correctly propagated to Poetry).
#  - The editable mode repository clone is saved into the dependencies layer.
#
# A C-based package is used instead of a pure Python package, in order to test that the
# Python headers can be found in the `include/pythonX.Y/` directory of the Python layer.
[tool.poetry.dependencies.extension-dist]
git = "https://github.com/pypa/wheel.git"
tag = "0.44.0"
subdirectory = "tests/testdata/extension.dist"
develop = true
